[gd_scene load_steps=9 format=3 uid="uid://ck5lebkhby0h2"]

[ext_resource type="Texture2D" uid="uid://dhgyupakgcej1" path="res://assets/sprites/puzzles/vidriera/puzzle_vidriera.png" id="1_r30b0"]
[ext_resource type="Script" path="res://scenes/game/puzzles/vidriera/nodos/puzzle_vidriera.gd" id="1_ve4n8"]
[ext_resource type="Script" path="res://scenes/game/puzzles/vidriera/nodos/area_vidrio_1.gd" id="3_dlveq"]
[ext_resource type="Texture2D" uid="uid://ch0deodv1y7fi" path="res://assets/sprites/puzzles/vidriera/vidrio1.png" id="4_doqw3"]
[ext_resource type="Texture2D" uid="uid://e0ukvfu8dr5t" path="res://assets/sprites/puzzles/vidriera/vidrio2.png" id="5_0pwjw"]
[ext_resource type="Texture2D" uid="uid://c4tvd5mn3y6mw" path="res://assets/sprites/puzzles/vidriera/vidrio3.png" id="6_n0lbm"]
[ext_resource type="Texture2D" uid="uid://bmir6hf22tdue" path="res://assets/sprites/puzzles/vidriera/vidrio4.png" id="7_0jree"]
[ext_resource type="Texture2D" uid="uid://cu7ekiyv2xcc6" path="res://assets/sprites/puzzles/vidriera/vidrio5.png" id="8_1w5s2"]

[node name="PuzzleVidriera" type="CanvasLayer"]
script = ExtResource("1_ve4n8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.407843, 0.403922, 1)

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(825, 323)
texture = ExtResource("1_r30b0")

[node name="Node2D" type="Node2D" parent="Panel/Sprite2D"]

[node name="vidrio1" type="Area2D" parent="Panel/Sprite2D/Node2D" node_paths=PackedStringArray("canvas")]
script = ExtResource("3_dlveq")
canvas = NodePath("../../../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel/Sprite2D/Node2D/vidrio1"]
polygon = PackedVector2Array(-120, -196, -105, -166, -95, -136, -84, -111, -75, -113, -79, -142, -101, -191)

[node name="vidrio2" type="Area2D" parent="Panel/Sprite2D/Node2D" node_paths=PackedStringArray("canvas")]
script = ExtResource("3_dlveq")
canvas = NodePath("../../../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel/Sprite2D/Node2D/vidrio2"]
position = Vector2(65, -29)
polygon = PackedVector2Array(-104, -169, -104, -160, -103, -131, -100, -126, -88, -125, -82, -167, -85, -181)

[node name="vidrio3" type="Area2D" parent="Panel/Sprite2D/Node2D" node_paths=PackedStringArray("canvas")]
script = ExtResource("3_dlveq")
canvas = NodePath("../../../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel/Sprite2D/Node2D/vidrio3"]
position = Vector2(50, 24)
polygon = PackedVector2Array(-112, -203, -107, -177, -101, -161, -93, -162, -85, -154, -86, -175, -88, -181)

[node name="vidrio4" type="Area2D" parent="Panel/Sprite2D/Node2D" node_paths=PackedStringArray("canvas")]
script = ExtResource("3_dlveq")
canvas = NodePath("../../../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel/Sprite2D/Node2D/vidrio4"]
position = Vector2(112, -10)
polygon = PackedVector2Array(-95, -204, -120, -144, -128, -121, -115, -119, -102, -143, -83, -185, -86, -205)

[node name="vidrio5" type="Area2D" parent="Panel/Sprite2D/Node2D" node_paths=PackedStringArray("canvas")]
script = ExtResource("3_dlveq")
canvas = NodePath("../../../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel/Sprite2D/Node2D/vidrio5"]
polygon = PackedVector2Array(47, -99, 117, -139, 125, -139, 133, -120, 51, -83)

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 94.0
offset_bottom = 44.0
text = "Regresar"

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 73.0
offset_right = 487.0
offset_bottom = 529.0
columns = 4

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 544.0
offset_right = 491.0
offset_bottom = 636.0
autowrap_mode = 2
max_lines_visible = 4

[node name="Node2D" type="Node2D" parent="Panel"]

[node name="Sprite1" type="Sprite2D" parent="Panel/Node2D"]
visible = false
position = Vector2(727, 168)
texture = ExtResource("4_doqw3")

[node name="Sprite2" type="Sprite2D" parent="Panel/Node2D"]
visible = false
position = Vector2(797, 140)
texture = ExtResource("5_0pwjw")

[node name="Sprite3" type="Sprite2D" parent="Panel/Node2D"]
visible = false
position = Vector2(777, 168)
texture = ExtResource("6_n0lbm")

[node name="Sprite4" type="Sprite2D" parent="Panel/Node2D"]
visible = false
position = Vector2(833, 151)
texture = ExtResource("7_0jree")

[node name="Sprite5" type="Sprite2D" parent="Panel/Node2D"]
visible = false
position = Vector2(915, 212)
texture = ExtResource("8_1w5s2")
